[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "versium-reach-sdk"
version = "1.0.0"
authors = [
  { name="Versium Analytics, Inc.", email="opensource@versium.com" },
]
description = "Python SDK for querying Versium Reach APIs"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
keywords = ["Versium", "MarTech", "API", "SDK", "Data Enrichment", "Data Appends", "Marketing", "B2B", "B2C", "Audience", "Identity Graph"]
dependencies = [
  "aiohttp>=3.8.0",
]

[project.urls]
Homepage = "https://api-documentation.versium.com/"
Documentation = "https://api-documentation.versium.com/reference/welcome"
Repository = "https://github.com/VersiumAnalytics/reach-api-python-sdk"
"API Trial Account" = "https://app.versium.com/create-developer-account"